--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask
-Flask_SQLAlchemy
-gunicorn
-scikit-learn
-Werkzeug
-spacy
-python-dateutil
+Flask==2.3.2
+Flask_SQLAlchemy==3.0.5
+gunicorn==20.1.0
+scikit-learn==1.2.2
+Werkzeug==2.3.6
+spacy==3.5.3
+python-dateutil==2.8.2
+numpy==1.23.5
+reportlab==4.0.4
 ro-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/ro_core_news_sm-3.5.0/ro_core_news_sm-3.5.0-py3-none-any.whl
-reportlab
