--- a/.render.yaml
+++ b/.render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
-    name: asistentAI_flask
+    name: asistent-ai-flask
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -w 4 -b 0.0.0.0:5000 app:app # asigură-te că punctul de intrare este corect
-    envVars:
-      - key: FLASK_ENV
-        value: production
+    buildCommand: pip install -r requirements.txt && python -m spacy download ro_core_news_sm
+    startCommand: gunicorn app:app
+    plan: free
+    autoDeploy: true
